/*
 * Copyright 2023 Exactpro (Exactpro Systems Limited)
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.exactpro.th2.common.test.grpc";


service Test {
  rpc singleRequestSingleResponse (Request) returns (Response) {}
  rpc singleRequestMultipleResponse (Request) returns (stream Response) {}
}

message Request {
  uint32 seq = 1;
}

message Response {
  uint32 orig_seq = 1;
  uint32 seq = 2;
}